[Recognizer] Use object to wrap absolute registry object path